# life

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.chglog/: CHANGELOG.tpl.md  RELEASE.tpl.md  changelog.yml  release.yml
.github/workflows/: ci.yml  release.yml
src/: generation.rs  grid.rs  grid_printer.rs  index.html  index.js  json.rs  main.rs  server.rs
