[package]
name = "life"
version = "0.4.0"
authors = ["Sébastien Job <sebastien.job@gmail.com>"]
edition = "2018"
description = "A game of life."

[dependencies]
rand = "0.8"
structopt = "0.3"
clap = "2.33"
axum = { version = "0.5.16", features = ["json"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
